[gd_scene load_steps=25 format=2]

[ext_resource path="res://assets/upgrades/Hull_05.png" type="Texture" id=1]
[ext_resource path="res://assets/upgrades/Gun_03.png" type="Texture" id=2]
[ext_resource path="res://assets/upgrades/Track_4_A.png" type="Texture" id=3]
[ext_resource path="res://assets/upgrades/Track_4_B.png" type="Texture" id=4]
[ext_resource path="res://assets/effects/Flash_A_01.png" type="Texture" id=5]
[ext_resource path="res://src/AllyTank.gd" type="Script" id=6]
[ext_resource path="res://assets/effects/Explosion_G.png" type="Texture" id=7]
[ext_resource path="res://assets/effects/Explosion_H.png" type="Texture" id=8]
[ext_resource path="res://assets/effects/Explosion_B.png" type="Texture" id=9]
[ext_resource path="res://assets/effects/Explosion_C.png" type="Texture" id=10]
[ext_resource path="res://assets/effects/Explosion_A.png" type="Texture" id=11]
[ext_resource path="res://assets/effects/Explosion_D.png" type="Texture" id=12]
[ext_resource path="res://assets/effects/Explosion_E.png" type="Texture" id=13]
[ext_resource path="res://assets/effects/Explosion_F.png" type="Texture" id=14]
[ext_resource path="res://src/Smoke.tscn" type="PackedScene" id=15]
[ext_resource path="res://assets/effects/light (1).png" type="Texture" id=16]
[ext_resource path="res://assets/effects/Flash_A_03.png" type="Texture" id=17]
[ext_resource path="res://assets/effects/Flash_A_02.png" type="Texture" id=18]
[ext_resource path="res://assets/sound/072. Comet Boom.mp3" type="AudioStream" id=19]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "working",
"speed": 2.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 54, 30 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 18 ), ExtResource( 17 ) ],
"loop": true,
"name": "explode",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=3]
radius = 448.018

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 11 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "explode",
"speed": 5.0
} ]

[node name="AllyTank" type="KinematicBody2D" groups=["allytank"]]
z_index = 1
collision_layer = 2
collision_mask = 15
script = ExtResource( 6 )

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 16 )
texture_scale = 0.5
color = Color( 1, 0.905882, 0.278431, 1 )

[node name="track" type="AnimatedSprite" parent="."]
position = Vector2( -1, -21.25 )
scale = Vector2( 0.441057, 0.511905 )
frames = SubResource( 1 )
animation = "working"
speed_scale = 5.0

[node name="track2" type="AnimatedSprite" parent="."]
position = Vector2( -1, 21.75 )
scale = Vector2( 0.441057, 0.535714 )
frames = SubResource( 1 )
animation = "working"
speed_scale = 5.0

[node name="body" type="Sprite" parent="."]
scale = Vector2( 0.426906, 0.375094 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 0 )
shape = SubResource( 2 )

[node name="turret" type="Sprite" parent="."]
position = Vector2( -8, 0 )
scale = Vector2( 0.477273, 0.5 )
texture = ExtResource( 2 )
offset = Vector2( 50, 0 )

[node name="muzzle" type="Position2D" parent="turret"]
position = Vector2( 146.667, 0 )

[node name="muzzleFlash" type="AnimatedSprite" parent="turret"]
visible = false
position = Vector2( 201.143, 0 )
scale = Vector2( 1.17764, 1.13867 )
frames = SubResource( 7 )
animation = "explode"

[node name="DetectionArea" type="Area2D" parent="."]
visible = false
collision_layer = 3
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource( 3 )

[node name="healthBar" type="ProgressBar" parent="."]
visible = false
margin_left = -54.0
margin_top = -54.0
margin_right = 52.0
margin_bottom = -40.0

[node name="explosion" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 1, -1 )
scale = Vector2( 0.78125, 0.738281 )
frames = SubResource( 6 )
animation = "explode"
speed_scale = 3.0

[node name="Smoke" parent="." instance=ExtResource( 15 )]
visible = false
position = Vector2( -42, -2 )

[node name="shoot-sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 19 )
